--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,10 @@ services:
     container_name: phlaw_backend
     ports:
       - "8000:8000"
+      - "7860:7860"
     volumes:
       - ./backend:/app/backend
+      - ./model_cache:/root/.cache/huggingface
     env_file:
       - ./backend/.env
     depends_on:
@@ -16,3 +18,6 @@ services:
     container_name: qdrant
     ports:
       - "6333:6333"
+    volumes:
+      - ./qdrant_data:/qdrant/storage
+
