--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ colorama==0.4.6
 Django==5.2.4
 djangorestframework==3.16.0
 dotenv==0.9.9
+drf-yasg==1.21.10
 faiss-cpu==1.11.0.post1
 fastapi==0.116.1
 ffmpy==0.6.1
@@ -29,6 +30,7 @@ httpx==0.28.1
 huggingface-hub==0.33.4
 hyperframe==6.1.0
 idna==3.10
+inflection==0.5.1
 Jinja2==3.1.6
 joblib==1.5.1
 jsonpatch==1.33
@@ -89,9 +91,8 @@ typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
+uritemplate==4.2.0
 urllib3==2.5.0
 uvicorn==0.35.0
 websockets==15.0.1
 zstandard==0.23.0
-drf-yasg>=1.21
-
