--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,36 +3,29 @@ version: '3.8'
 services:
   # Backend service (Django)
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: backend/Dockerfile  # Path to the backend Dockerfile
     container_name: phlaw_backend
     ports:
       - "8000:8000"  # Django backend
-      - "7860:7860"  # Possibly for Gradio or another service
+      - "7860:7860"  # For GPU services
     volumes:
       - ./model_cache:/root/.cache/huggingface
       - ./backend:/app/backend
-      # - ./law-chat.Q5_K_M.gguf:/app/law-chat.Q5_K_M.gguf  # If model outside backend
     env_file:
       - ./backend/.env
     depends_on:
-      - qdrant
-    runtime: nvidia  # For GPU support
+      - qdrant  # Ensure Qdrant is up before backend starts
+    runtime: nvidia  # GPU support
     environment:
-      - NVIDIA_VISIBLE_DEVICES=all  # For GPU usage
-
-  # Qdrant service for vector storage
-  qdrant:
-    image: qdrant/qdrant
-    container_name: qdrant
-    ports:
-      - "6333:6333"  # Default port for Qdrant's HTTP API
-    volumes:
-      - qdrant_data:/qdrant/storage
+      - NVIDIA_VISIBLE_DEVICES=all  # GPU usage
 
   # Frontend service (Next.js)
   frontend:
     build:
-      context: ./frontend  # Path to your Next.js project
+      context: . # Path to the frontend directory
+      dockerfile: frontend/Dockerfile  # The Dockerfile inside the frontend directory
     container_name: phlaw_frontend
     ports:
       - "3000:3000"  # Next.js default port
@@ -40,8 +33,17 @@ services:
       - ./frontend:/app/frontend  # Sync frontend code
     command: npm run dev  # Start Next.js development server
     depends_on:
-      - web  # Ensure the backend is up before the frontend
+      - web  # Ensure backend is up before frontend starts
+
+  # Qdrant service (if needed)
+  qdrant:
+    image: qdrant/qdrant
+    container_name: qdrant
+    ports:
+      - "6333:6333"  # Default Qdrant port
+    volumes:
+      - qdrant_data:/qdrant/storage
 
 # Named volumes
 volumes:
-  qdrant_data:  # For Qdrant storage persistence
+  qdrant_data:  # For persistent Qdrant storage
