--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,8 @@
-QDRANT_HOST=qdrant
-QDRANT_PORT=6333
-QDRANT_COLLECTION=jurisprudence2
+# Qdrant Cloud configuration
+QDRANT_CLOUD_URL=https://884dfd60-e0a5-4dd6-888e-2d45574083b1.europe-west3-0.gcp.cloud.qdrant.io:6333
+QDRANT_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.3jpkaNu15XMq7-OB18g3IT9nnH_kzwojNsCxyLx2Zw8
+QDRANT_COLLECTION=jurisprudence
 
+# Embedding model config
 EMBED_MODEL=Stern5497/sbert-legal-xlm-roberta-base
 VECTOR_SIZE=768
