--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
     container_name: qdrant
     ports:
       - "6333:6333"  # Qdrant's HTTP API port
+      - "6334:6334"  # Qdrant's gRPC API port
     volumes:
       - qdrant_data:/qdrant/storage  # Persistent storage for Qdrant
 
