--- a/backend/.env
+++ b/backend/.env
@@ -9,3 +9,10 @@ VECTOR_SIZE=768
 QDRANT_HOST=localhost
 QDRANT_PORT=6333
 QDRANT_COLLECTION=jurisprudence
+
+YEAR_START=2025
+YEAR_END=2025
+CASES_JSONL=data/cases.jsonl.gz
+CONCURRENCY = 8
+SLOWDOWN_MS = 250
+TIMEOUT_S   = 60
