--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,187 @@
-Django
+accelerate==1.9.0
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+aiosqlite==0.21.0
+alphashape==1.3.1
+annotated-types==0.7.0
+anyio==4.9.0
+appdirs==1.4.4
+asgiref==3.9.1
+asyncio==4.0.0
+attrs==25.3.0
+beautifulsoup4==4.13.4
+Brotli==1.1.0
+bs4==0.0.2
+certifi==2025.7.14
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.2
+chromium==0.0.0
+click==8.2.1
+click-log==0.4.0
+colorama==0.4.6
+Crawl4AI==0.7.3
+cryptography==45.0.6
+dataclasses-json==0.6.7
+datasets==4.0.0
+dill==0.3.8
+diskcache==5.6.3
+distro==1.9.0
+Django==5.2.4
+django-axes==8.0.0
+django-cors-headers==4.7.0
+django-prometheus==2.4.1
+django-request-logging==0.7.5
 djangorestframework==3.16.0
-django-cors-headers
-
-qdrant-client==1.15.0
-sentence-transformers==5.0.0
-transformers==4.53.3
-torch==2.7.1
-
-python-dotenv==1.1.1
-pandas
-numpy
-psutil==7.0.0  # for system/process KPI metrics
-
-# KPI/metrics and monitoring
-django-axes         # Security and login attempt tracking
-django-prometheus   # Export metrics to Prometheus/Grafana
-django-request-logging # Log request/response details
-prometheus-client   # For custom metric tracking in Django
-
-# For API testing & docs
-requests==2.32.4
+dotenv==0.9.9
+fake-http-header==0.3.5
+fake-useragent==2.2.0
+fastapi==0.116.1
+ffmpy==0.6.1
+filelock==3.18.0
+frozenlist==1.7.0
+fsspec==2025.3.0
+gradio==5.41.1
+gradio_client==1.11.0
+greenlet==3.2.3
+groovy==0.1.2
+grpcio==1.73.1
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.1
+huggingface-hub==0.34.3
+humanize==4.12.3
+hyperframe==6.1.0
+idna==3.10
+importlib_metadata==8.7.0
+inflection==0.5.1
+iniconfig==2.1.0
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+langchain==0.3.26
+langchain-community==0.3.27
+langchain-core==0.3.74
+langchain-openai==0.3.30
+langchain-text-splitters==0.3.8
+langsmith==0.4.8
+lark==1.2.2
+litellm==1.75.5.post1
+llama_cpp_python==0.3.14
+lxml==5.4.0
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.6.4
+multiprocess==0.70.16
+mypy_extensions==1.1.0
+nest-asyncio==1.6.0
+networkx==3.5
+nltk==3.9.1
+numpy==2.3.2
+openai==1.100.1
+orjson==3.11.0
+outcome==1.3.0.post0
+packaging==25.0
+pandas==2.3.1
+patchright==1.52.5
+pillow==11.3.0
+playwright==1.54.0
+pluggy==1.6.0
+portalocker==3.2.0
+prometheus_client==0.22.1
+propcache==0.3.2
+protobuf==6.31.1
+psutil==7.0.0
+pyarrow==21.0.0
+pycparser==2.22
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+pydub==0.25.1
+pyee==13.0.0
+Pygments==2.19.2
+pyOpenSSL==25.1.0
+PyPDF2==3.0.1
+PySocks==1.7.1
+pytest==8.4.1
+pytest-base-url==2.1.0
+pytest-playwright==0.7.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-multipart==0.0.20
+python-slugify==8.0.4
+pytz==2025.2
+pywin32==311
 PyYAML==6.0.2
-
-# For development/quality
+qdrant-client==1.15.0
+ragas==0.3.1
+rank-bm25==0.2.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.4
+requests-toolbelt==1.0.0
+rich==14.0.0
+rpds-py==0.27.0
+rtree==1.4.0
 ruff==0.12.4
-pytest==8.2.1
-llama-cpp-python
+safehttpx==0.1.6
+safetensors==0.5.3
+scikit-learn==1.7.1
+scipy==1.16.0
+selectolax==0.3.33
+selenium==4.34.2
+semantic-version==2.10.0
+sentence-transformers==5.0.0
+shapely==2.1.1
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+snowballstemmer==2.2.0
+sortedcontainers==2.4.0
+soupsieve==2.7
+SQLAlchemy==2.0.41
+sqlparse==0.5.3
+starlette==0.47.2
+swagger-ui-py==25.7.1
+sympy==1.14.0
+tenacity==9.1.2
+text-unidecode==1.3
+tf-playwright-stealth==1.2.0
+threadpoolctl==3.6.0
+tiktoken==0.11.0
+tokenizers==0.21.2
+tomlkit==0.13.3
+torch==2.8.0+cu129
+torchvision==0.23.0+cu129
+tqdm==4.67.1
+transformers==4.53.3
+trimesh==4.7.3
+trio==0.30.0
+trio-websocket==0.12.2
+typer==0.16.0
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+uritemplate==4.2.0
+urllib3==2.5.0
+uvicorn==0.35.0
+websocket-client==1.8.0
+websockets==15.0.1
+wsproto==1.2.0
+xxhash==3.5.0
+yarl==1.20.1
+zipp==3.23.0
+zstandard==0.23.0
