Update .gitignore to include virtual environment and environment files; add new environment variables to backend configuration for API integration and local development.

--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,10 @@ build/
 *.log
 
 # --- Virtual Environments & Environment Files ---
-# venv/
-# .env
-# .env.*
-# *.env.json
+venv/
+.env
+.env.*
+*.env.json
 
 # --- VS Code & IDEs ---
 .vscode/
