--- a/backend/.env
+++ b/backend/.env
@@ -16,3 +16,11 @@ CASES_JSONL=data/cases.jsonl.gz
 CONCURRENCY = 8
 SLOWDOWN_MS = 250
 TIMEOUT_S   = 60
+
+REV21_BASE_URL=https://ai-tools.rev21labs.com/api/v1 
+REV21_ENDPOINT_PATH=/chat/completions 
+REV21_API_KEY= 
+REV21_ENABLED=true 
+DJANGO_SECRET_KEY=change_me_dev_secret 
+DEBUG=true 
+ALLOWED_HOSTS=localhost,127.0.0.1
