Add evaluation dependency and enhance case extraction logic: included sacrebleu for evaluation metrics in requirements.txt. Updated sample extraction script to improve output formatting and ensure proper JSONL structure. Added new test scripts for BLEU score evaluation and legal document chunking strategy, while removing outdated Docker integration tests.

--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,9 @@ tqdm==4.67.1
 python-dateutil==2.9.0.post0
 regex==2024.11.6
 
+# Evaluation
+sacrebleu==2.4.3
+
 # Optional: For data collection (crawler)
 # Uncomment if you need to update case data
 # beautifulsoup4==4.13.4
