--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,10 @@ scikit-learn==1.7.1
 numpy==2.3.2
 scipy==1.16.0
 
+# Contextual RAG Dependencies
+tiktoken==0.8.0  # For token counting
+beautifulsoup4==4.13.4  # For document processing
+
 # Data Processing
 pandas==2.3.1
 orjson==3.11.0
