Update .gitignore, remove outdated documentation, and add new classifier and test data: Enhanced .gitignore to exclude additional backend files and directories. Deleted obsolete AI_QUERY_ROUTING.md, RATING_METRICS_GUIDE.md, and other test scripts to streamline the codebase. Introduced a new Bar Subject Classifier for legal case categorization and added a comprehensive dataset of test queries spanning from 2005 to 2025, improving the chatbot's capabilities in handling legal inquiries.

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,10 @@ volume_backup/
 backend/law-chat.Q5_K_M.gguf
 backend/data/*.gz
 backend/law-chat.Q4_K_M.gguf
+
+backend/legal_roberta_finetuned/
+backend/backend/data
+backend/data/evaluation_logs
+backend/test_results
+test_results
+wandb
